# ocufuzz

./: .gitignore  HOWTORUN.md  README.md  pyproject.toml
examples/test-sites/: README.md
examples/test-sites/flow-site/: index.html
examples/test-sites/forms-site/: index.html
examples/test-sites/widgets-site/: index.html
previous_runs/fuzz_20260430_163247/: report.html
previous_runs/fuzz_20260430_163247/run_01/: run_history.json  slideshow.html  transitions.json
previous_runs/fuzz_20260430_163247/run_02/: run_history.json  transitions.json
previous_runs/fuzz_20260501_070416/: report.html
previous_runs/fuzz_20260501_070416/run_01/: run_history.json  slideshow.html  transitions.json
previous_runs/fuzz_20260501_080817/: report.html
previous_runs/fuzz_20260501_080935/: report.html
previous_runs/fuzz_20260501_081602/: report.html
previous_runs/fuzz_20260501_115306/: report.html
previous_runs/fuzz_20260501_115618/: report.html
previous_runs/fuzz_20260501_120114/: report.html
previous_runs/fuzz_20260501_151159/: report.html
sample_runs/obscure-issue-site/: report.html
sample_runs/obvious-issue-site/: report.html
scripts/: serve_test_sites.py
src/ocufuzz/: __init__.py  __main__.py  cli.py  explore.py  fuzz.py  history_parser.py  report.py  summarize.py  trace.py
test-sites/: README.md
test-sites/site-1/: index.html
test-sites/site-2/: index.html
test-sites/site-3/: index.html
test-sites/site-obscure-issue/: README.md  index.html
test-sites/site-obvious-issue/: README.md  index.html
(+81 files in other folders)
