[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocufuzz"
version = "0.1.0"
description = "Vision-only agentic fuzzer for frontend QA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.12.0",
    "pydantic>=2.0",
]

[project.scripts]
ocufuzz-explore = "ocufuzz.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
